--- a/learning_logs/20260115.md
+++ b/learning_logs/20260115.md
@@ -1,11 +1,69 @@
-# HTML & CSS
+# HTML & CSS 수업시작
 
 # Visual Studio Code 관련 설정
-1. ctrl + -
-2. 
+1. ctrl + , / cmd + , : 설정
+  - tab size 검색 : 4 -> 2
+2. 줄바꿈 설정(word wrap)
+  - 설정 -> word wrap
+3. 괄호 구분(여는괄호/닫는괄호 색깔 일치)
+  - Bracket Pairs
 
 # Extension 설치
 1. 한글 팩(Korean Language Pack)
 2. Material Icon Theme
 3. One Dark Pro
 4. indent-rainbow
+5. live server
+6. live preview
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+## 첫 태그 사용하기
+`<어쩌고>` + `</어쩌고>`
+
+
+## 주석
+<!-- 이 안쪽은 주석 -->
+
+## 제목 태그
+`<h1></h1>`
+`<h2></h2>`
+`<h3></h3>`
+`<h4></h4>`
+`<h5></h5>`
+`<h6></h6>`
+
+## 줄바꿈 태그
+`<br>`
+
+## 스타일 강조 태그
+`<b></b>`
+`<strong>`
+`<i></i>`
+`<em>`
+
+## 첨자 태그
+1<sup>st</sup>, 2<sup>nd</sup>, 3<sup>rd</sup>,4<sup>th</sup>, 5<sup>th</sup>, 6<sup>th</sup>, 7<sup>th</sup>
+
+H<sub>2</sub>O
