--- a/learning_logs/20250116.md
+++ b/learning_logs/20250116.md
@@ -26,3 +26,28 @@ less then / greater than
 
 - blockquote 최종 정리
     - 대표적 특징으로 인용내용 들여쓰기가 있다.
+
+
+
+
+
+
+
+
+
+
+
+
+# 태그로 여러 요소 나열하기
+- 어떤 정보를 나열할 떄 목록으로 표기하면 시인성이 높아진다. 이런 목록을 표기할 떄에는 순서가 있나 없나로 태그가 나뉜다.
+
+## 목록을 표현하는 태그
+- `<ul>` 태그는 unrdered list의 축약어로 순서가 상환없는 리스트를 만들떄 사용한다.
+
+```
+<ul>
+    <li>딸기</li>
+    <li>사과</li>
+    <li>포도</li>
+</ul>
+```
