--- a/learning_logs/20250116.md
+++ b/learning_logs/20250116.md
@@ -295,3 +295,58 @@ table>caption+(tr>td*3)*3 로 emmet 작성했습니다.
 이상의 Emmet에서 알 수 있는 점 :
 1. `#` : 태그 내의 id 속성을 의미함.
 2. `%` : 동적으로 변하는 값을 임의
+3. `[]` : 태그 내의 속성에 접근할때 사용
+4. `{}` : 태그의 내용에 접근할때 사용
+
+## 태그로 연락처 연결하기.
+
+연락처를 연결하기 위해서는 href 속성 내에서 mailto: / tel: 를 이용합니다.
+
+예시
+`<a href="mailto:a@test.com">a@test.com</a>`
+`<a href="tel:010-1234-5678">010-1234-5678</a>`
+
+
+
+
+## `<form>` 태그 사용하기
+- 사용자로부터 입력을 받기위한 양식을 작성하는 태그를 통틀어서 지칭하는 용어
+### `<form>` 태그의 속성
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body bgcolor="5f5f5f">
+    <h1>01_formtag.html</h1>
+    <form action="./01_formtag.html" method="get">
+        <label for="name">이름</label>
+        <input id="name" type="text">
+        <br><br>
+        <label for="age">나이</label>
+        <input id="id" name="my-age" type="text">
+        <br><br>
+        <button type="submit">제출</button>
+        <button type="reset">초기화</button>
+    </form>
+</body>
+</html>
+```
+- 이상의 예시 코드에서 사용되는 속성들
+    1. `<form>` 태그
+        - action
+        - method
+            - 현재 수준에서는 경험해보지는 못했지만, 우리가 이름과 나이를 입력했을 떄 그 정보를 가져가서 보여주는 결과 페이지에 해당한다. 현재 수준에는 form 태그 내에 action / method 속성이 있다는 것만 알아도 큰 문제는 없다.
+    
+    2. `<input>` 태그
+        - 추후 별도의 챕터에서 상세히 다뤄질 예정
+        - name : HTML 상에서는 특별한 의미를 가지는게 아닌, 서버에서 각 항목을 받을 때 무엇에 대한 값인지의 구분용 속성에 해당한다. DB와의 연결성 관련이다.
+
+    3. `<label>` 태그
+        - `<input>` 태그와 유기적으로 연결됨. `<input>` 태그에 부여한 id 속성값을 label 태그에서의 for 속성에서 불러오기 떄문이다.
+
+    4. `<button>` 태그
+        - type, submit, reset으로 사전에 정의되어있다. submit의 경우 입력한 결과값을 최종 서버나 특정 페이지 주소로 보내는 제출용이다. reset은 입력 내용을 모두 초기화한다.
