--- a/learning_logs/20260119.md
+++ b/learning_logs/20260119.md
@@ -560,3 +560,71 @@
 4. 브라우저 새창 문제 - 한 화면에 여러 사이트를 불러오는 것과 같기 때문에 RAM 많이 잡아먹습니다.
 
 ### 아무것도 하지 않는 `<div>` 태그 vs. `<span>` 태그
+- 이전까지의 학습에서는 태그들이 각기 다른 역할이 존재했었지만, 이번에는 아무 역할도 하지 않는 태그에 대해 학습합니다.
+- 하지만 css 적용시에 있어서 매우 중요하기에 성격의 차이를 학습하겠습니다.
+
+`<span>` 태그와 `<div>`태그는 기능적으로는 아무것도 하지 않습니다.
+- 차이점
+1. `<span>` 태그는 _텍스트 내용이 들어간 부분만큼만 영역을 차지_  : 인라인(inline)
+2. `<div>` 태그는 _텍스트가 포합된 브라우저 가로 전체 영역을 차지 : 블록(block)
+
+## CSS 적용 방법과 _선택자_
+### CSS 적용 3가지 방법
+1. 인라인 (inline style) 방식 :
+    - HTML 문서의 태그가 있는 라인마다 style 속성으로 css 코드를 일일이 넣어주는 방식입니다
+    여러 요소에 공통 속성을 부여할 수 없다는 단점이 있고, HTML 코드와 CSS 코드가 분리되지 않기에
+    특출나게 강조하는 부분이 아니면 사용되지 않습니다.
+    (다만 tailwind css를 설치하면 이 방식이 자주 사용되는 문제가 있다. -> AI가 보통 tailwind를 이용해서 CSS를 생성합니다.)
+
+2. 내부 스타일 시트 (internal sytle sheet) 방식 : 
+    - HTML 문서의 `<head>`태그 안에 `<sytle>` 태그를 정의하고그 안에 CSS 코드를 작성하는 방식.
+    인라인 스타일과 달리 공통 속성을 부여할 CSS를 일괄적으로 정리할 수 있습니다.
+    - HTML + CSS의 양이 얼마 되지 않을 때 유용하게 사용됩니다.
+
+3. 링킹 스타일 시트 (linking style sheet) 방식 : 
+    - HTML 문서와 CSS 파일을 각각 분리하여 서로 연결(link)하여 사용하는 방식.
+    즉 Java에서 배웠던 정의하는 class와 실행하는 main을 나누었던 것 처럼 별개로 분리하는 방식입니다.
+    한번 작성한 CSS 파일을 여러 HTML에서 공동적으로 사용할 수 있기 때문에 가장 많이 사용됩니다.
+    (다만 AI때문에 최근 방식 자체가 변하고 있음.)
+
+## 선택자(Selector)
+### 기본 선택자
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./02_selector.css">
+</head>
+<body bgcolor="5f5f5f">
+    <span>span 요소</span>
+    <p>p요소</p>
+    <p>p요소, class는 blue</p>
+    <span>span요소, class는 dark</span>
+    <p>p요소, class는 blue와 dark</p>
+    <p>p요소, class는 blue id는 red</p>
+</body>
+</html>
+```
+
+```css
+* {
+    font-weight: bold;
+    color: darkorange;
+}
+
+* {
+    color: plum;
+}
+
+/*태그 선택자*/
+
+p {
+    color: olivedrab
+}
+```
+- CSS로 HTML의 어떤 요소를 꾸밀지 지정하기 위해서는 _선택자_라는 개념이 중요합니다.
+CSS가 
